# vendas-cli

./: .gitignore  README.md  pyproject.toml  vendas.csv
tests/: test_cli.py  test_core.py  test_output.py  test_parser.py
vendas_cli/: cli.py  config.py  core.py  errors.py  models.py  output.py  parser.py
